WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
52969
Fix FFTFrameStub to compile properly
https://bugs.webkit.org/show_bug.cgi?id=52969
Summary
Fix FFTFrameStub to compile properly
Chris Rogers
Reported
2011-01-22 14:50:39 PST
Fix FFTFrameStub to compile properly
Attachments
Patch
(1.18 KB, patch)
2011-01-22 14:57 PST
,
Chris Rogers
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Rogers
Comment 1
2011-01-22 14:57:49 PST
Created
attachment 79859
[details]
Patch
Eric Seidel (no email)
Comment 2
2011-01-22 15:01:21 PST
Comment on
attachment 79859
[details]
Patch What was the build error? I don't understand why commenting things out like this is the right fix.
Chris Rogers
Comment 3
2011-01-22 15:05:27 PST
the build error is that it will not compile on Linux because the log2() function is not known. Since this is simply a stub implementation there's no need to initialize these variables to other than zero.
Daniel Bates
Comment 4
2011-01-22 16:31:07 PST
Comment on
attachment 79859
[details]
Patch Will land by hand as requested by Chris Rogers.
Daniel Bates
Comment 5
2011-01-22 16:34:35 PST
Committed
r76456
: <
http://trac.webkit.org/changeset/76456
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug