2011-01-22  Chris Rogers  <crogers@google.com>

Rubber-stamped by Anders Carlsson.

        Fix FFTFrameStub to compile properly
        https://bugs.webkit.org/show_bug.cgi?id=52969

        No new tests since this is a build fix.

        * platform/audio/FFTFrameStub.cpp:
        (WebCore::FFTFrame::FFTFrame):


Canonical link: https://commits.webkit.org/66690@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76456 268f45cc-cd09-0410-ab3c-d52691b4dbfc